# tool-dev-practice

./: .gitignore  Makefile  README.md  conversion_log.txt  toolsmith_report.md
python/: LINTING.md  Makefile  file_info.py  pyproject.toml  pytest.ini  qa_report.md  requirements-test.txt  run_tui.py  test.txt  test_tool_discovery.py
python/.claude/agents/: agent-cheerleader.md  docker-threat-intel-analyst.md  offensive-security-toolsmith.md  offensive-security-trainer.md  project-coordinator.md  qa-tester.md  safety-monitor.md  salty-email-responder.md  ux-tui-developer.md  version-control-sync.md
python/defense/: REVIEW_NOTES.md  toolsmith_report.md
python/defense/baseline-auditor/: README.md  tool.py
python/defense/honeypot-detector/: README.md  tool.py
python/defense/ioc-scanner/: README.md  tool.py
python/defense/log-analyzer/: README.md  tool.py
python/defense/log-analyzer/tests/: __init__.py  (+1 more)
python/defense/network-monitor/: README.md  tool.py
python/tests/: .gitkeep  __init__.py  conftest.py  test_amsi_bypass.py  test_credential_validator.py  test_dns_enumerator.py  test_edr_evasion.py  test_file_info.py  test_hash_cracker.py  test_http_request_tool.py  test_network_scanner.py  test_network_scanner_edge_cases.py  test_payload_generator.py  test_payload_generator_edge_cases.py  test_port_scanner.py  test_port_scanner_edge_cases.py  test_process_hollowing.py  test_reverse_shell_handler.py  test_service_fingerprinter.py  test_shellcode_encoder.py  test_shellcode_encoder_edge_cases.py  test_smb_enumerator.py  test_template.py  test_web_directory_enumerator.py
python/tests/docker_integration/: __init__.py  conftest.py  test_dns_enumeration.py  test_ftp_credentials.py  test_smb_enumeration.py  test_smtp_credentials.py  test_web_enumeration.py
python/tests/edge_cases/: __init__.py  test_edge_credential_inputs.py  test_edge_encoding_inputs.py  test_edge_file_inputs.py  test_edge_network_inputs.py  test_edge_port_inputs.py
python/tests/fuzz/: __init__.py  test_fuzz_network_inputs.py  test_fuzz_port_inputs.py  test_fuzz_url_inputs.py
python/tests/integration/: __init__.py  test_integration_base.py
python/tests/performance/: __init__.py  test_perf_encoding.py  test_perf_scanning.py
python/tests/security/: __init__.py  test_input_sanitization.py  test_safe_defaults.py
python/tools/: .gitkeep  REVIEW_NOTES.md  test_all_imports.py  testing_utils.py
python/tools/amsi-bypass/: README.md  __init__.py  amsi_bypass.py
python/tools/credential-validator/: README.md  tool.py
python/tools/dns-enumerator/: README.md  tool.py
python/tools/edr-evasion-toolkit/: README.md  __init__.py  edr_evasion.py
python/tools/environment/: requirements.txt  setup.py
python/tools/hash-cracker/: README.md  tool.py
python/tools/http-request-tool/: README.md  tool.py
python/tools/network-scanner/: README.md  tool.py
python/tools/payload-generator/: README.md  __init__.py  payload_generator.py
python/tools/port-scanner/: README.md  tool.py
python/tools/process-hollowing/: README.md  __init__.py  process_hollowing.py
python/tools/reverse-shell-handler/: README.md  tool.py
python/tools/service-fingerprinter/: README.md  tool.py
python/tools/shellcode-encoder/: README.md  __init__.py  shellcode_encoder.py
python/tools/smb-enumerator/: README.md  tool.py
python/tools/web-directory-enumerator/: README.md  tool.py
python/tui/: .gitkeep  __init__.py  __main__.py  app.py
python/tui/components/: __init__.py
python/tui/evaluations/: code_quality_evaluation.md  functional_evaluation.md  ux_evaluation.md
python/tui/screens/: __init__.py  dashboard.py  docker_screen.py  network_screen.py  tool_config.py
python/tui/styles/: __init__.py  main.tcss
python/tui/tests/: conftest.py  test_app.py  test_docker_integration.py  test_helpers.py  test_network_integration.py  test_screens.py  test_widgets.py
python/tui/utils/: __init__.py  docker_targets.py  helpers.py  network_targets.py  tool_discovery.py  tool_executor.py
python/tui/visualizers/: __init__.py  attack_visualizer.py
python/tui/widgets/: __init__.py  docker_widgets.py  network_widgets.py  output_viewer.py  status_bar.py  tool_panel.py
(+211 files in other folders)
