# CPTC11 Python Project Configuration
# This file configures linting (ruff) and other project settings

[project]
name = "cptc11"
version = "1.0.0"
description = "CPTC11 Security Testing Toolkit"
requires-python = ">=3.8"

[tool.ruff]
# Target Python version
target-version = "py38"

# Line length limit
line-length = 100

# Include all Python files
include = ["*.py", "**/*.py"]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".eggs",
    "*.egg-info",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
# Enable these rule categories:
# E/W - pycodestyle errors/warnings
# F - Pyflakes
# I - isort
# N - pep8-naming
# B - flake8-bugbear
# C4 - flake8-comprehensions
# S - flake8-bandit (security)
# UP - pyupgrade
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit (security)
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert detected (valid in tests)
    "S104",   # Possible binding to all interfaces (intentional for tools)
    "S105",   # Possible hardcoded password (false positives in security tools)
    "S106",   # Possible hardcoded password (false positives in security tools)
    "S107",   # Possible hardcoded password (false positives in security tools)
    "S110",   # Try-except-pass detected (intentional in some cases)
    "S311",   # Standard pseudo-random generators (acceptable for jitter)
    "S320",   # lxml parsing (not applicable)
    "S603",   # subprocess call (necessary for some tools)
    "S607",   # Starting a process with partial path (necessary)
    "B008",   # Function call in argument defaults (used in dataclasses)
    "B904",   # Raise without from (contextual)
    "N802",   # Function name should be lowercase (some exceptions)
    "N803",   # Argument name should be lowercase (some exceptions)
    "N806",   # Variable in function should be lowercase (some exceptions)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and magic values
"tests/**/*.py" = ["S101", "PLR2004", "B011"]
"**/tests/**/*.py" = ["S101", "PLR2004", "B011"]
"test_*.py" = ["S101", "PLR2004", "B011"]
# Tools directory has intentional security-related patterns
"tools/**/*.py" = ["S104", "S105", "S106", "S107", "S108", "S113", "S301", "S324", "S501", "S608"]
# Allow print statements in CLI tools
"**/tool.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["tools", "tui", "tests"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
# Enable auto-detection of magic trailing commas
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "fuzz: marks tests as fuzz tests",
    "security: marks tests as security-focused",
]

[tool.coverage.run]
source = ["tools", "tui"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
